# OOP_Basics

CalendarEvent/: CMakeLists.txt  Calendar.cpp  Calendar.hpp  Event.cpp  Event.hpp  main.cpp
GPS/: CMakeLists.txt  gps.cpp  gps.hpp  main.cpp
GameCharacter/: CMakeLists.txt  character.cpp  character.hpp  game.cpp  game.hpp  main.cpp
MedicalPatient/: CMakeLists.txt  hospital.cpp  hospital.hpp  main.cpp  patient.cpp  patient.hpp
NightSky/: CMakeLists.txt  main.cpp  sky.cpp  sky.hpp  star.cpp  star.hpp
